Add team section
Updated the language of the about page from Russian to English and added a team section.

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ru">
+<html lang="en">
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
@@ -41,7 +41,7 @@
     <div class="card">
       <h1 class="h1">About us</h1>
       <p class="p">
-        Mini Recipe Book is an educational DApp where each recipe is represented as a crowdfunding-style campaign
+        Mini Recipe Book is a DApp where each recipe is represented as a crowdfunding-style campaign
         on the Sepolia test network.
       </p>
 
@@ -52,11 +52,40 @@
         <li>Users connect with MetaMask.</li>
         <li>Users contribute test ETH to a recipe campaign until a deadline.</li>
         <li>Contributions are tracked on-chain per user.</li>
-        <li>After the deadline, owner finalizes the campaign.</li>
+        <li>After the deadline, the owner finalizes the campaign.</li>
         <li>If successful → owner withdraws. If failed → users refund.</li>
         <li>ERC-20 reward tokens are minted automatically for contributors.</li>
       </ul>
 
+      <div class="hr"></div>
+      <h2 class="h1" style="font-size:22px;">Our Team</h2>
+
+      <div class="team-grid">
+        <div class="team-card">
+          <div class="team-avatar" aria-hidden="true">👤</div>
+          <div class="team-name">Kashym Anel</div>
+          <div class="team-role">CEO 1</div>
+        </div>
+
+        <div class="team-card">
+          <div class="team-avatar" aria-hidden="true">👤</div>
+          <div class="team-name">Issa Gulzada</div>
+          <div class="team-role">CEO 2</div>
+        </div>
+
+        <div class="team-card">
+          <div class="team-avatar" aria-hidden="true">👤</div>
+          <div class="team-name">Kenzhegaliyev Ali</div>
+          <div class="team-role">CEO 3</div>
+        </div>
+
+        <div class="team-card">
+          <div class="team-avatar" aria-hidden="true">👤</div>
+          <div class="team-name">Maratbekov Alikhan</div>
+          <div class="team-role">CEO 4</div>
+        </div>
+      </div>
+      
       <div class="hr"></div>
 
       <h2 class="h1" style="font-size:22px;">Tech stack</h2>
